# DiscordAIBots

./: .env.example  .gitignore  CLAUDE.md  LICENSE  pyproject.toml
Docs/: Discord BotでPython処理を呼び出す.md  OllamaとPythonでQwen3を動かす.md  セットアップ手順.md
src/: __init__.py  bot.py  config.py  evaluator.py  gdrive.py  main.py
